# Projects

./: .gitignore  README.md  main.py  pyproject.toml
AI_Agents/: reseach_agent.ipynb
LLM/: intro.ipynb
LLM/data/: data.txt
MistralOCR/: docu_links.md  output.md  test.ipynb  test.md
University_ProjectSS23/Code/: Config.py  GeneralFunctions.py  LoadData.py  PrepareData.py  RunModel.py
University_ProjectSS23/Input/: configurations.json
University_ProjectSS23/Output/Run_2023-Jul-05_15-44-23/Data/: cleaned_data
University_ProjectSS23/Output/Run_2023-Oct-03_15-56-20/Data/: cleaned_data.csv
University_ProjectSS23/Output/Run_2023-Oct-03_15-56-20/Results/: linear_regression_results.csv
Wafermap_Project/: ConvAutoEncoder_kaggle.ipynb  kaggle.ipynb  test.ipynb
Wafermap_Project/App/: app.py  flask_app.py  test.py
Wafermap_Project/App/model/: CNN.ipynb  model.py  tempCodeRunnerFile.py  torch_CNN.ipynb
Wafermap_Project/App/model/data_exploration/: classification_report.csv
Wafermap_Project/App/model/models/: torchCNN.pth
Wafermap_Project/App/templates/: base.html  get_prediction.html  home.html  index.html  predict.html  result.html
Wafermap_Project/Kaggle/: ConvAutoEncoder_kaggle.ipynb  mymodel_test.ipynb
ai-agents/: mulit_agent_collaboration_system.ipynb  output.md
auto-ml-app/: app.py
finetune/: generated_prompt.py  synthetic_data_generation.py  train.py
finetune/data/: instruction.json
llm-finetuning/: Modelfile  preprocessing.py  resoruces.md  tm1dataset.json  train.py
ollama/: localtest.py
stock-market-dashboard/: requirements.txt  stock_dashboard.py
university-project-23/Code/: Dashboard.py
university-project-23/Input/: input_temperature.xml
wafermap-project/App/model/: model.py  torch_CNN.ipynb
wafermap-project/App/model/data_exploration/: classification_report.csv
wafermap-project/App/templates/: base.html
