[project]
name = "random-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "datauri>=1.0.0",
    "ipykernel>=6.29.5",
    "keras>=3.10.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "matplotlib>=3.10.3",
    "mistralai>=1.8.2",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.0",
    "yfinance>=0.2.63",
]
