[project]
name = "random-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "bitsandbytes>=0.46.0",
    "colorama>=0.4.6",
    "datauri>=1.0.0",
    "docling>=2.37.0",
    "ipykernel>=6.29.5",
    "keras>=3.10.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "litellm>=1.72.6.post1",
    "matplotlib>=3.10.3",
    "mistralai>=1.8.2",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "peft>=0.15.2",
    "plotly>=6.1.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "trl>=0.18.2",
    "yfinance>=0.2.63",
]
